# wayland-bongocat

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  bongocat.conf  bongocat.conf.example  flake.nix  out.txt  shell.nix
.github/: FUNDING.yml
.github/workflows/: aur-publish.yml  ci.yml
assets/: COPYRIGHT.md
examples/: digimon.bongocat.conf
include/: animation.h  bongocat.h  config.h  embedded_assets.h  embedded_assets_bongocat.h  input.h  memory.h  wayland.h
include/config/: config.h
include/core/: bongocat.h  multi_monitor.h
include/graphics/: animation.h  context.h  embedded_assets.h  embedded_assets_bongocat.h
include/graphics/embedded_assets/: bongocat.h  min_dm.h
include/platform/: fullscreen.h  hyprland.h  input.h  input_context.h  wayland.h
include/utils/: error.h  memory.h  time.h
man/: bongocat.1
nix/: NIXOS.md  README.md  common.nix  default.nix  home-module.nix  nixos-module.nix  shell.nix
scripts/: all_crop_spritesheets.sh  all_generate_embedded_assets.sh  all_generate_init_digimon_anim_inl.sh  crop_spritesheet.sh  embed_assets.sh  find_input_devices.sh  generate_embedded_assets.sh  generate_init_digimon_anim_inl.sh  test_nix_build.sh  test_toggle.sh
src/: animation.c  config.c  config_watcher.c  embedded_assets.c  embedded_assets_bongocat.c  input.c  main.c  wayland.c
src/config/: config.c  config_watcher.c
src/core/: main.c  multi_monitor.c
src/graphics/: animation.c  embedded_assets.c  embedded_assets_bongocat.c
src/graphics/embedded_assets/: bongocat.c  min_dm.c  min_dm_config_parse_enum_key.c.inl  min_dm_init_digimon_anim.c.inl  min_dm_init_digimon_embedded_images.c.inl
src/platform/: fullscreen.c  hyprland.c  input.c  wayland.c
src/utils/: error.c  memory.c  time.c
tests/: test_config.c  test_memory.c
